footer no longer overlays content on small screens

--- a/static/css/custom_theme.css
+++ b/static/css/custom_theme.css
@@ -65,3 +65,13 @@ body {
     outline: none !important;
     border-bottom-color: #258af6 !important;
 }
+
+@media (min-width: 576px) {
+    .custom-fixed-bottom-sm {
+        position: fixed;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: 200000;
+    }
+}
